--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,7 +16,8 @@ main:
   #  url: /year-archive/
     
   - title: "CV"
-    url: /cv/
+    url: /files/CV.pdf
+  #  url: /cv/
     
   #- title: "Guide"
   #  url: /markdown/
