--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -16,7 +16,7 @@ main:
   #  url: /year-archive/
     
   - title: "CV"
-    url: /files/CVmx.pdf
+    url: /files/CV.pdf
   #  url: /cv/
     
   #- title: "Guide"
